# learn-cython

./: Makefile  pyproject.toml
hello_py/: hello.c
hello_pyx/: hello.c
hello_twice_pyx/: hello.c  hello.pyx
